<!DOCTYPE resources [<!ENTITY author "Elijah Bosley">]>

<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="time_mode">The current time mode is: </string>
    <string name="time_mode_24">24 hour</string>
    <string name="time_mode_12">12 hour</string>
    <string name="time_mode_text">text</string>
    <string name="time_format_12">hh:mm a</string>
    <string name="time_format_24">HH:mm</string>
    <string name="help">Help</string>
    <string name="author_tab">Author</string>
    <string name="help_text">This is a test help text</string>
    <string name="author_info">This application was designed by: &author;</string>
    <string name="start_date">Saturday, June 18th, 2016"</string>
    <string name="end_date">Sunday, June 19th, 2016</string>
    <string name="date_range">Worked on between:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Theme settings selection screen -->
    <string name="pref_header_theme">Theme</string>
    <string-array name="pref_theme_titles">
        <item>Light"</item>
        <item>Dark"</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
