<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="16dp"
        android:text="@string/help_text"
        android:id="@+id/textView2"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />
    <TextView
        android:id="@+id/authorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/updatedDates"
        android:text="@string/author_info"/>
    <TextView
        android:id="@id/updatedDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/date_range" />

</RelativeLayout>