<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:background="@drawable/background" android:orientation="vertical">
    <TextView
        android:id="@+id/worked_on_dates"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_range" />
    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"/>
    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"/>

</LinearLayout>